--- a/frontend/src/Pages/Utilities/ZoomInfo.css
+++ b/frontend/src/Pages/Utilities/ZoomInfo.css
@@ -9,6 +9,7 @@
 .zoom-info-card {
   width: 800px;
   overflow: hidden;
+  background-color: white;
   border-radius: 30px;
   box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.2);
   margin: 20px;
